--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Web site created using create-react-app" />
+
+		<!-- Bootstrap CDN -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -28,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>Outsourcing App</title>
+		<title>Outsourcing Management System | Federal Bank</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
